2002-02-05  Yoshinori K. Okuji  <okuji@enbug.org>

	* netboot/misc.c (twiddle): Go back to the bar progress, copied
	from etherboot-5.0.5/src/misc.c. Execute the code only if DEBUG
	is true.
	
2002-02-05  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/builtins.c (displaymem_func): Use hex digits to display
	for consistency.
	
2002-02-04  Jason Thomas  <jason@topic.com.ah>

	From Denis Kitzman  <dkitzman@blue.weeg.uiowa.edu>:
	* stage2/Makefile.am (libgrub_a_CFLAGS): Fixed a typo.
	FSYS_XFS, USE_MD5_PASSWORDS, SUPPORT_SERIAL, and
	SUPPORT_HERCULES did not get defined.

2002-01-20  Yoshinori K. Okuji  <okuji@gnu.org>

	* util/grub-image.in: Check stage2 instead of stage2.c to
	determine where the script is invoked, because srcdir may not
	be used for the compilation.
	
2002-01-20  Yoshinori K. Okuji  <okuji@gnu.org>

	* grub/asmstub.c (console_putchar): When not using curses,
	ignore a carriage return, because a newline in Unix is only a
	line feed.
	
2002-01-18  Klaus Reichl  <Klaus.Reichl@alcatel.at>

	* stage2/fsys_minix.c (minix_dir): Fixed bug getting filenames
	with MAXNAMELEN right.

	* stage2/char_io.c (get_cmdline, cl_refresh): If TERMINAL_DUMB
	section is always 0.
	Line is only cleared if !TERMINAL_DUMB.

	* grub/main.c (use_curses): Initialize to 0 if !HAVE_LIBCURSES
	(main): Check for curses use and set terminal to dumb if we
	don't use it (helps for --batch and variants of non-curses
	setup).

2002-01-15  Yoshinori K. Okuji  <okuji@gnu.org>

	* configure.in (AM_INIT_AUTOMAKE): The version number is
	upgraded to 0.91.
	
2002-01-15  Yoshinori K. Okuji  <okuji@gnu.org>

	* docs/grub.texi (Preset Menu): New chapter.
	
2002-01-15  Yoshinori K. Okuji  <okuji@gnu.org>

	* docs/grub.texi: Added some text about JFS and XFS.
	
2002-01-08  Yoshinori K. Okuji  <okuji@gnu.org>

	* grub/main.c (use_preset_menu): New variable.
	(OPT_PRESET_MENU): New macro.
	(longopts): Added an entry for "--preset-menu".